--- a/cw6-Graphics/antbuild/build.xml
+++ b/cw6-Graphics/antbuild/build.xml
@@ -18,8 +18,11 @@
     <target name="jar" depends="compile">
         <mkdir dir="${jar.dir}"/>
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+            <!--fileset dir="libs" /-->
+            <fileset dir="resources" />
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
+                <!--attribute name="Class-Path" value="opencv-3.1/bin/opencv-310.jar"/-->
             </manifest>
         </jar>
     </target>
